--- a/scFlowVis/templates/visual-programming-page.html
+++ b/scFlowVis/templates/visual-programming-page.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Scanpy Data Visualization</title>
+    <title>scFlowVis</title>
     <!--D3-->
     <script src="../static/build/d3.v6.min.js"></script>
     <!--lightgraph package js & css-->
